--- a/indexCustom.html
+++ b/indexCustom.html
@@ -41,8 +41,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
-                    <li text-align: left>
-                        <a class="page-scroll" href="#page-top">Home</a>
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -82,9 +83,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/" target="_blank">UM Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
-                <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of musical creation both from a personal perspective and from the perspective of professional musicians. It is hosted on <a href="http://www.Medium.com" target="_blank">Medium.com</a> and can be found below.</p> 
-                <p>Also showcased here are several other pieces I have written ranging in subject from psychology to anthropology, and in genre from academic review to personal narrative. While they each stand alone as complete pieces, in the context of this portfolio my hope is that they can reinforce an idea that my project introduces: the importance of learning through reference, reusing and recycling content, and the sharing of ideas.</p>
+                <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/">UM Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
+                <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of musical creation, stemming from macro social theory to up-close, personal reasoning.</p>
+                <p>It also includes an assortment of other writing I have done ranging in subject, genre, length and style. I invite you to explore as little or as much as you wish!</p>
             </div>
         </div>
     </section>
@@ -94,10 +95,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Capstone Project</h2>
-                <hr>
-                        <p>It’s been said before but it’s worth repeating: there are no completely new ideas, just new implementations of those ideas. In the world of art especially, creation never occurs in a vacuum; rather it thrives on inspiration, borrowing, and stealing. It is the chaotic product of a community who are in constant referential experimentation.</p>
-                    
-                        <p>In this project I focus on the realm of music, and how and why this process of creation comes to be. Much of my information comes directly from the mouths of musicians, because after all this process is fundamentally an individual one. Nevertheless, I argue that woven across different genres and motivations is a universal thread to which all humans can connect. This connection and the way it manifests is what I hoped to explore with this project. Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
+                <p>Here I will provide a short introduction and link to my Capstone Project, which will be hosted on <a href="http://medium.com">Medium</a>.</p>
+                <p>Here is the link to the current <a href="https://medium.com/@joeostrow/12db8335094">draft</a>.</p>
+                <p>More to come soon.</p>
+                <p>(This is to keep the spacing right)</p>
             </div>
         </div>
     </section>
@@ -113,14 +114,14 @@
             <hr>
           </div>
           <div class="col-md-6 col-md-offset-3">
-          <h4><a href="workFiles/WriterEvolution.pdf" target="_blank">My Evolution as a Writer</a></h4>
-          <p>An analysis of personal adaptation through my writing. Specifically, I focus on the continuing process on achieving credibility with my work, what I believe this means, how I hope to accomplish it, and why I think it is important.</p>
+          <h4><a href="https://JSTRO.github.io">My Evolution as a Writer</a></h4>
+          <p>Description</p>
           <hr>
-          <h4><a href="workFiles/OnTheRunReview.pdf" target="_blank">"On The Run" Review</a></h4>
-          <p>My review of Alice Goffman's recent urban ethnography, "On The Run," written after six years of field work, which documents police surveillance and brutality in a primarily black, working class neighborhood in Philadelphia.</p>
+          <h4><a href="https://JSTRO.github.io">"On The Run" Review</a></h4>
+          <p>Description</p>
           <hr>
-          <h4><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Turnbull Paper Critical Review</a></h4>
-          <p>My critical review of Colin Turnbull's 1961 documentation of the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
+          <h4><a href="https://JSTRO.github.io">Turnbull Paper Critical Review</a></h4>
+          <p>Description</p>
           <hr
           <hr>
         </div>
@@ -135,17 +136,17 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <p>Feel free to email me to provide some feedback on my portfolio, give me suggestions on content, or to just say hello!</p>
-                <p><a href="mailto:jstro@umich.edu" target="_blank">jstro@umich.edu</a>
+                <p><a href="mailto:feedback@startbootstrap.com">jstro@umich.edu</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/umichSweetland" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="#contact" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/JSTRO" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/JSTRO" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+JosephOstrow/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="#contact" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
             </div>
@@ -156,7 +157,6 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Joseph Ostrow 2014</p>
-            <hr>
         </div>
     </footer>
 
