--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <hr>
-                <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/" target="_blank">UM Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
+                <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/" target="_blank">University of Michigan Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
                 <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of musical creation both from a personal perspective and from the perspective of professional musicians. It is hosted on <a href="http://www.Medium.com" target="_blank">Medium.com</a> and can be found below.</p> 
-                <p>Also showcased here are several other pieces I have written ranging in subject from psychology to anthropology, and in genre from academic review to personal narrative. While they each stand alone as complete pieces, in the context of this portfolio my hope is that they can reinforce an idea that my project introduces: the importance of learning through reference, reusing and recycling content, and the sharing of ideas.</p>
+                <p>Also showcased here are several other pieces I have written ranging both in subject and genre. While each stand alone as complete pieces, in the context of this portfolio I hope they can reinforce themes central to my project: the importance of learning from outside perspectives, of critique and argumentation, and of constantly questioning the information we are quickest to accept.</p>
             </div>
         </div>
     </section>
@@ -96,9 +96,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Capstone Project</h2>
                 <hr>
-                        <p>It’s been said before but it’s worth repeating: there are no completely new ideas, just new implementations of those ideas. In the world of art especially, creation never occurs in a vacuum; rather it thrives on inspiration, borrowing, and stealing. It is the chaotic product of a community who are in constant referential experimentation.</p>
+                        <p>Making music has, for a long time, been central to my life. And for a long time I have been asking why? What is it this about this particular form of artistic expression that speaks to me so powerfully?</p>
                     
-                        <p>In this project I focus on the realm of music, and how and why this process of creation comes to be. Much of my information comes directly from the mouths of musicians, because after all this process is fundamentally an individual one. Nevertheless, I argue that woven across different genres and motivations is a universal thread to which all humans can connect. This connection and the way it manifests is what I hoped to explore with this project. Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
+                        <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of composers. Through conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
+
+                        <p>Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
             </div>
         </div>
     </section>
