--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Joseph Ostrow</h1>
-                        <p class="intro-text">Capstone Portfolio for the University of Michigan <br> Minor in Writing</p>
+                        <p class="intro-text"; class="pcenter">Capstone Portfolio for the University of Michigan <br> Minor in Writing</p>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                     
                         <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of composers. Through conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
 
-                        <p>Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
+                        <p class="pcenter">Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
             </div>
         </div>
     </section>
@@ -124,8 +124,6 @@
           <hr>
           <h4><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Turnbull Paper Critical Review</a></h4>
           <p>My critical review of Colin Turnbull's 1961 documentation of the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
-          <hr
-          <hr>
         </div>
       </div>
     </div>
@@ -138,8 +136,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <hr>
-                <p>Feel free to email me to provide some feedback on my portfolio, give me suggestions on content, or to just say hello!</p>
-                <p><a href="mailto:jstro@umich.edu" target="_blank">jstro@umich.edu</a>
+                <p class="pcenter">Feel free to email me to provide some feedback on my portfolio, give me suggestions on content, or to just say hello!</p>
+                <p class="pcenter"><a href="mailto:jstro@umich.edu" target="_blank";>jstro@umich.edu</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -159,7 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Joseph Ostrow 2014</p>
+            <p class="pcenter">Copyright &copy; Joseph Ostrow 2014</p>
             <hr>
         </div>
     </footer>
