other writing update

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
           <hr>
           <h4><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Turnbull Paper Critical Review</a></h4>
           <p>My critical review of Colin Turnbull's 1961 documentation of the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
+          <hr>
+          <h4><a href= target="_blank">Los Hombres Opresivos en <i>La Mordaza</i> y <i>El Tragaluz</i>
+</a></h4>
+          <p>A literary analysis of the themes of male oppression in the plays <i>La Mordaza</i> y <i>El Tragaluz</i>.</p>
         </div>
       </div>
     </div>
@@ -156,9 +160,9 @@
 
     <!-- Footer -->
     <footer>
+        <hr>
         <div class="container text-center">
             <p class="pcenter">Copyright &copy; Joseph Ostrow 2014</p>
-            <hr>
         </div>
     </footer>
 
