--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <h2>About</h2>
                 <hr>
                 <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/" target="_blank">University of Michigan Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
-                <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of musical creation both from a personal perspective and from the perspective of professional musicians. It is hosted on <a href="http://www.Medium.com" target="_blank">Medium.com</a> and can be found below.</p> 
-                <p>Also showcased here are several other pieces I have written ranging both in subject and genre. While each stand alone as complete pieces, in the context of this portfolio I hope they can reinforce themes central to my project: the importance of learning from outside perspectives, of critique and argumentation, and of constantly questioning the information we are quickest to accept.</p>
+                <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of the reasons people have for creating music, both from a personal perspective and from the perspective of professional musicians. It is hosted on <a href="http://www.Medium.com" target="_blank">Medium.com</a> and can be found below.</p> 
+                <p>Also showcased here are several other pieces I have written ranging both in subject and genre. While each stand alone, in the context of this portfolio I hope they can reinforce themes central to my project: the importance of learning from outside perspectives, of critique and argumentation, and of constantly questioning the information we are quickest to accept.</p>
             </div>
         </div>
     </section>
@@ -98,9 +98,9 @@
                 <hr>
                         <p>Making music has, for a long time, been central to my life. And for a long time I have been asking why? What is it this about this particular form of artistic expression that speaks to me so powerfully?</p>
                     
-                        <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of composers. Through conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
+                        <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of musicians. Through secondary research, images, videos, and conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
 
-                        <p class="pcenter">Click <a href="https://medium.com/@joeostrow" target="_blank">here</a> to view it.</p> 
+                        <p class="pcenter">Click <a href="https://medium.com/capstone-project/trending" target="_blank">here</a> to view it.</p> 
             </div>
         </div>
     </section>
@@ -116,18 +116,17 @@
             <hr>
           </div>
           <div class="col-md-6 col-md-offset-3">
-          <h4><a href="workFiles/WriterEvolution.pdf" target="_blank">My Evolution as a Writer</a></h4>
-          <p>An analysis of personal adaptation through my writing. Specifically, I focus on the continuing process on achieving credibility with my work, what I believe this means, how I hope to accomplish it, and why I think it is important.</p>
+          <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">My Evolution as a Writer</a></h4>
+          <p>An analysis of personal adaptation through my writing. Specifically, I focus on the continuing process of achieving credibility through my work, what I believe this means, how I hope to accomplish it, and why I think it is important.</p>
           <hr>
           <h4><a href="workFiles/OnTheRunReview.pdf" target="_blank">"On The Run" Review</a></h4>
-          <p>My review of Alice Goffman's recent urban ethnography, "On The Run," written after six years of field work, which documents police surveillance and brutality in a primarily black, working class neighborhood in Philadelphia.</p>
+          <p>My review of Alice Goffman's recent urban ethnography, "On The Run." Written after seven years of field work, it documents police surveillance and brutality in a primarily black, working class neighborhood of Philadelphia.</p>
           <hr>
           <h4><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Turnbull Paper Critical Review</a></h4>
-          <p>My critical review of Colin Turnbull's 1961 documentation of the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
+          <p>My critical review of Colin Turnbull's 1961 report on the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
           <hr>
-          <h4><a href= target="_blank">Los Hombres Opresivos en <i>La Mordaza</i> y <i>El Tragaluz</i>
-</a></h4>
-          <p>A literary analysis of the themes of male oppression in the plays <i>La Mordaza</i> y <i>El Tragaluz</i>.</p>
+          <h4><a href="workFiles/EnsayoFinalLaProblemaDeLaUniversal.pdf" target="_blank">La Problema de la Universal</a></h4>
+          <p>The final essay for my Spanish course, "Marketing Latinamericanism," this is a critique of Universalism using examples from authors such as Idelber Avelar, José Luis Venegas, Sarah Brouillete, and Borges.</p>
         </div>
       </div>
     </div>
@@ -160,7 +159,6 @@
 
     <!-- Footer -->
     <footer>
-        <hr>
         <div class="container text-center">
             <p class="pcenter">Copyright &copy; Joseph Ostrow 2014</p>
         </div>
