--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Capstone Project</h2>
                 <hr>
-                        <p>Making music has, for a long time, been central to my life. And for a long time I have been asking why? What is it this about this particular form of artistic expression that speaks to me so powerfully?</p>
+                        <p>Making music has, for a long time, been central to my life. And for a long time I have been asking, "why?" What is it about this particular form of artistic expression that speaks to me so powerfully?</p>
                     
                         <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of musicians. Through secondary research, images, videos, and conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
 
