--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
     <title>Joseph Ostrow - Capstone Portfolio</title>
 
+
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="favicon.ico" rel="icon">
 
     <!-- Custom CSS -->
     
