initial personal site update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="css/grayscaleCustom.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
@@ -48,10 +48,10 @@
                         <a class="page-scroll" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#capstone">Capstone Project</a>
+                        <a class="page-scroll" href="#capstone">Research</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#work">Other Writing</a>
@@ -66,14 +66,16 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Joseph Ostrow</h1>
-                        <p class="intro-text"; class="pcenter">Capstone Portfolio for the University of Michigan <br> Minor in Writing</p>
+<!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header class="intro-header" style="background-image: url('img/SanSebastianBlur.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="page-heading">
+                        <h1>Joseph Ostrow</h1>
+                        <hr>
+                        <span class="subheading">Researcher, Writer, Musician</span>
                     </div>
                 </div>
             </div>
@@ -84,11 +86,12 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About</h2>
+                <h2>About Me</h2>
                 <hr>
-                <p> Welcome to my Capstone portfolio for the <a href="http://www.lsa.umich.edu/sweetland/minorinwriting/" target="_blank">University of Michigan Minor in Writing</a>! My name is Joe Ostrow, and I'm a senior concentrating in Biopsychology, Cognition & Neuroscience (BCN) with minors in both Writing and Spanish.</p>
-                <p>The centerpiece of this portfolio is my Capstone Project, which is an exploration of the reasons people have for creating music, both from a personal perspective and from the perspective of professional musicians. It is hosted on <a href="http://www.Medium.com" target="_blank">Medium.com</a> and can be found below.</p> 
-                <p>Also showcased here are several other pieces I have written ranging both in subject and genre. While each stand alone, in the context of this portfolio I hope they can reinforce themes central to my project: the importance of learning from outside perspectives, of critique and argumentation, and of constantly questioning the information we are quickest to accept.</p>
+                <p> Welcome to my site! My name is Joe Ostrow, and I'm a recent graduate of the University of Michigan, where I earned a B.S. in Biopsychology, Cognition & Neuroscience (BCN), and minored in Writing and Spanish.</p>
+                <p>As a student at U of M, I was involved in a couple research projects, first in the field of bioinformatics, and secondly in music cognition. You can find links to some of my work under the "Research" tab. Moving forward, I hope to gain more experience in neuroscience and psychology research, whether in a lab setting or elsewhere, before continuing on to graduate school.</p> 
+                <p>Also showcased here are several examples of writing work that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it, and find the actual piece, under the "Other Writing" tab.</p> 
+                <p>Finally I am also a lifelong musician, classically trained in double bass, as well as an avid guitar player, and aspiring composer and producer. While it is not here yet, expect a "Music" tab soon!</p>
             </div>
         </div>
     </section>
@@ -97,13 +100,10 @@
     <section id="capstone" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Capstone Project</h2>
+                <h2>Research</h2>
                 <hr>
-                        <p>Making music has, for a long time, been central to my life. And for a long time I have been asking, "why?" What is it about this particular form of artistic expression that speaks to me so powerfully?</p>
-                    
-                        <p>After a long period of internal debate, I decided to pose this question to others like me. This project is an exploration of why people create music from the mouths and minds of musicians. Through secondary research, images, videos, and conversations woven in with my own commentary, I attempt to translate their individual reasoning and justification to people both musically inclined and not, with the hope that their words, and music, can resonate on a universal level.</p> 
-
-                        <p class="pcenter">Click <a href="https://medium.com/capstone-project/trending" target="_blank">here</a> to view it.</p> 
+                    <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">"Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines"</a></h4>
+                     <p>A poster I created while I was working as an undergraduate research assistant in the lab of Dr. Yongqun "Oliver" He showing specific genes that can predict the efficacy of two types of influenza vaccines.</p> 
             </div>
         </div>
     </section>
@@ -119,8 +119,8 @@
             <hr>
           </div>
           <div class="col-md-6 col-md-offset-3">
-          <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">My Evolution as a Writer</a></h4>
-          <p>An analysis of personal adaptation through my writing. Specifically, I focus on the continuing process of achieving credibility through my work, what I believe this means, how I hope to accomplish it, and why I think it is important.</p>
+          <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></h4>
+          <p>My Capstone Project for the University of Michigan Minor in Writing. This piece functions as a personal reflection intertwined with a series of interviews, both centered around the question of why people create music, and why it is ultimately important.</p>
           <hr>
           <h4><a href="workFiles/OnTheRunReview.pdf" target="_blank">"On The Run" Review</a></h4>
           <p>My review of Alice Goffman's recent urban ethnography, "On The Run." Written after seven years of field work, it documents police surveillance and brutality in a primarily black, working class neighborhood of Philadelphia.</p>
@@ -142,18 +142,18 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <hr>
-                <p class="pcenter">Feel free to email me to provide some feedback on my portfolio, give me suggestions on content, or to just say hello!</p>
+                <p class="pcenter">Please feel free to email me!</p>
                 <p class="pcenter"><a href="mailto:jstro@umich.edu" target="_blank";>jstro@umich.edu</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/umichSweetland" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://medium.com/@joeostrow" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-medium fa-fw"></i> <span class="network-name">Medium</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/JSTRO" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+JosephOstrow/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://www.linkedin.com/pub/joseph-ostrow/63/a7b/715" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn+</span></a>
                     </li>
                 </ul>
             </div>
