updated research tab

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <hr>
                 <p> Welcome to my site! My name is Joe Ostrow, and I'm a recent graduate of the University of Michigan, where I earned a B.S. in Biopsychology, Cognition & Neuroscience (BCN), and minored in Writing and Spanish.</p>
                 <p>As a student at U of M, I was involved in a couple research projects, first in the field of bioinformatics, and secondly in music cognition. You can find links to some of my work under the "Research" tab. Moving forward, I hope to gain more experience in neuroscience and psychology research, whether in a lab setting or elsewhere, before continuing on to graduate school.</p> 
-                <p>Also showcased here are several examples of writing work that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it, and find the actual piece, under the "Other Writing" tab.</p> 
-                <p>Finally I am also a lifelong musician, classically trained in double bass, as well as an avid guitar player, and aspiring composer and producer. While it is not here yet, expect a "Music" tab soon!</p>
+                <p>Also showcased here are several examples of writing that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it, and find the actual piece, under the "Other Writing" tab.</p> 
+                <p>Finally, I am also a lifelong musician, classically trained in double bass, as well as an avid guitar player, and aspiring composer and producer. While it is not here yet, expect a "Music" tab soon!</p>
             </div>
         </div>
     </section>
@@ -102,8 +102,15 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Research</h2>
                 <hr>
-                    <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">"Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines"</a></h4>
-                     <p>A poster I created while I was working as an undergraduate research assistant in the lab of Dr. Yongqun "Oliver" He showing specific genes that can predict the efficacy of two types of influenza vaccines.</p> 
+                    <h4><a href="workFiles/Poster_UROP_Final(2).pdf" target="_blank">"Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines"</a></h4>
+                     <p>A poster I created while working as an undergraduate research assistant in the lab of Dr. Yongqun "Oliver" He, showing specific genes that can predict the efficacy of two types of influenza vaccines.</p> 
+                        <hr>
+                    <h4><a href="http://www.ncbi.nlm.nih.gov/pubmed/24259431" target="_blank">"Updates on the web-based VIOLIN vaccine database and analysis system."</a></h4>
+                     <p>A paper that I co-authored, also during my time in Dr. He's lab. It focuses on a number of updates made to the VIOLIN vaccine database from 2008-2013.</p> 
+                        <hr>
+                    <h4><a href="workFiles/SMPC2015ConradCorey.pdf" target="_blank">"Attributes of Songs People Love and Listen to Most Often"</a></h4>
+                     <p>A presentation that I co-authored and helped present at the 2015 Society for Music Perception and Cognition Conference. It details our lab's exploratory study on emotional responses people have to the music they listen to most often.</p> 
+
             </div>
         </div>
     </section>
@@ -119,7 +126,7 @@
             <hr>
           </div>
           <div class="col-md-6 col-md-offset-3">
-          <h4><a href="workFiles/MyEvolutionasaWriterDraft3Bibliography.pdf" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></h4>
+          <h4><a href="https://medium.com/capstone-project" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></h4>
           <p>My Capstone Project for the University of Michigan Minor in Writing. This piece functions as a personal reflection intertwined with a series of interviews, both centered around the question of why people create music, and why it is ultimately important.</p>
           <hr>
           <h4><a href="workFiles/OnTheRunReview.pdf" target="_blank">"On The Run" Review</a></h4>
